# freesper

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  entitlements.mac.plist  package-lock.json  package.json  pyproject.toml  screen-focus-problem.md
assets/: ICON_README.txt  icon.icns  iconTemplate.png.txt
assets/sounds/: README.md
openspec/: project.md
openspec/changes/add-parakeet-nemo-support/: design.md  proposal.md  tasks.md
openspec/changes/fix-screen-focus/: design.md  proposal.md  tasks.md
openspec/changes/implement-speech-inference/: design.md  proposal.md  tasks.md
scripts/: add_onnx_metadata.py  build.js  check-env.js  convert_parakeet_to_onnx.py  convert_to_onnx.py  download-python-standalone.js  download_parakeet_hf.py  extract_features.py  generate-update-manifest.js  test_sounds.js  transcribe_onnx_asr.py  transcribe_parakeet.py  transcribe_sherpa.py  transcribe_sherpa_vad.py  upload-to-minio.sh
src/: main.js
src/modules/: audioRecorder.js  autoConverter.js  inferenceEngine.js  modelManager.js  pythonManager.js  soundManager.js  tokenizer.js  updateManager.js
tests/: compare_parakeet.py  test_parakeet_int8.py  test_parakeet_int8_complete.py  test_parakeet_int8_direct.py  test_parakeet_int8_final.py  test_parakeet_int8_full.py  test_parakeet_int8_sherpa.py  test_parakeet_int8_summary.py  test_parakeet_optimized.py
ui/: index.html  nativeAudioRecorder.js  recording.html  recordingRenderer.js  renderer.js  setup.html  styles.css  update.html
website/: README.md  index.html  og-image-template.html  robots.txt  sitemap.xml
(+13 files in other folders)
